r88 - august, 2, 2009
	* fixtures.yml has been renamed as test_data.yml
	* test_data.yml : filled for being ready for tests
	* test/bootstrap/functional.php : load fixtures
	* associationActionsTest.php : new tests (creation of association)
	* membre : actions > processForm > when registering the first user, ACL
	  are given before redirecting to success page
	* updates/1.1.0beta-to-1.1/r88.sql : CASCADE for on delete action has been
	  set to acl_credential table
	

r87 - august, 2, 2009
	* statut : delete > we can't delete if there are Membres who belong to
	  the statut
	* statut : delete > physical deletion
	* statut : index > display error message if we try to delete a used item
	* Statut.php : countMembers has been removed to use the original
	  countMembres instead
	  

r86 - august, 2, 2009
	* Statut.php : countMembers() method
	* statut : index > display number of members who belong to each statut
	* statut : index > icon and link to go to the details
	* statut : show > template has been enhanced
	
	
r85 - july, 21, 2009
	* Edited wiki page through web user interface.
	

r84 - july, 21, 2009
	* assocation : mailing > sendMail line has been uncommented
	* install : configDatabase > display flash message if user give wrong
	  mysql settings
	* install : new action 'end' which displays information once configuration
	  is complete
	* install : config/security.yml > access is granted for action 'end'
	* install : launch SQL file to create tables and insert data


r83 - july, 20, 2009
	* lib/misc/FileModifier.class.php : new class file
	* install : actions > checkConfiguration > new tests has been added. the
	  config/databases.yml file has to be writable
	* install : configDatabase action has been implemented


r82 - july, 19, 2009
    * install : configDatabase > new action
    * apps/front/lib/DatabaseConfigForm.class.php : new form class
    * install : templates > template to display DatabaseConfig form


r81 - july, 19, 2009