@@ -1,0 +1,130 @@
+
+	=========================================================================
+	|																		|
+	|		########  ########    ###    ########  ##     ## ######## 		|
+	|		##     ## ##         ## ##   ##     ## ###   ### ##       		|
+	|		##     ## ##        ##   ##  ##     ## #### #### ##       		|
+	|		########  ######   ##     ## ##     ## ## ### ## ######   		|
+	|		##   ##   ##       ######### ##     ## ##     ## ##       		|
+	|		##    ##  ##       ##     ## ##     ## ##     ## ##       		|
+	|		##     ## ######## ##     ## ########  ##     ## ######## 		|
+	|																		|
+	|																		|
+	=========================================================================
+
+
+	LICENCE
+	-------
+	Ce programme est fourni sous licence MIT.  Vous pouvez trouver la licence
+	complète dans le fichier /doc/LICENCE
+
+    
+    VERSION EN LIGNE
+    ----------------
+    Vous  pouvez retrouver la version  en ligne de cette documentation sur le
+    du projet : http://code.google.com/p/piwam/wiki/InstallerPiwam
+
+
+	1) Configuration Requise
+	-------------------------
+	
+		PHP >= 5.2.4
+            module mb_string
+            module php_openssl
+			module php_smtp
+			memory_limit: 128M
+		MySQL
+		Apache
+            mod_rewrite
+
+
+	2) Comment Installer Piwam
+	--------------------------
+
+		A- Depuis le dépôt SVN :
+		
+			0- Vous devez posséder Symfony 1.2
+			1- Ouvrez le fichier config/ProjectConfiguration.class. Modifier
+			   l'inclusion du fichier `sfCoreAutoload` en spécifiant le
+			   chemin correct.
+			2- Éditez le fichier apps/front/config/settings.yml et remplissez
+			   les paramètres à configurer avec vos propres réglages 
+			3- Créez un répertoire `cache` inscriptible
+		
+					
+		B- Configurer un Virtual Host
+				
+			Si vous utilisez  Piwam  sur votre serveur web,  il est fortement
+			recommendé  de configurer un accès par VirtualHost.  Par exemple, 
+			"http://piwam.mon-domain.com"  doit faire référence au répertoire
+			/path/to/piwam/web.
+			
+			Voici  un exemple de configuration que vous  devriez placer  dans
+			votre fichier apache/conf/httpd.conf:
+			
+			-----------------------------------------------------------------
+			<VirtualHost *:80>
+				ServerName piwam.my-domain.com
+				DocumentRoot "/home/foobar/piwam/web"
+				DirectoryIndex index.php
+			  	<Directory "/home/foobar/piwam/web">
+			    	AllowOverride All
+			    	Allow from All
+			  	</Directory>
+			</VirtualHost>
+			-----------------------------------------------------------------
+			
+			Si vous souhaitez juste essayer Piwam,  ou si Piwam est installé
+			sur  votre  ordinateur personnel  est  n'est pas  accessible  par
+			Internet,  vous   pouvez  sans  soucis   ne  pas   configurer  de 
+			VirtualHost.
+			
+
+		C- Accéder à Piwam
+		
+			Lancez  votre navigateur Interner - essayez de choisir Firefox ou
+			Google Chrome ;-)   Si un  VirtualHost a été  configuré,  allez à 
+			l'adresse configuré (ici: http://piwam.mon-domain.com).
+			Autrement,  vous  pouvez  accéder  à Piwam  directement  par  une
+			adresse telle que http://your-server.com/piwam/web
+			
+			
+		D- Finir l'installation depuis l'interface web
+		
+			Maintenant  que vous savez comment accéder à Piwam,  il est temps
+			de  vérifier votre configuration  et  de finir  quelques réglages.
+			Allez  à  l'adresse http://piwam.mon-domain.com/install et suivez
+			les instructions.
+			Cette partie se déroule en 2 étapes :
+			
+			1- Piwam vérifie votre configuration.  Est-ce que les modules PHP
+			   nécessaires  sont bien activés, est-ce que les répertoires qui
+			   doivent être inscriptibles le sont bien, etc.
+			2- Configuration de  l'accès à  votre base de  données MySQL. Une
+			   vérification  des  paramètres  est  effectuée  et  un  message 
+			   d'erreur apparaîtra si ceux-ci sont incorrects.
+		
+		
+	
+	3) En cas de problème...
+	------------------------
+	
+		Si vous rencontrez des soucis, vous pouvez :
+			1- Vérifiez que vous avez correctement suivi ce README
+			2- Vérifier que vos serveurs Apache/MySQL fonctionnent normalement
+			3- Lancer /web/check_configuration.php
+			4- Vous abonner et écrire à http://groups.google.com/group/piwam
+			5- Rappotrer un bug sur http://code.google.com/p/piwam/issues/entry	
+		
+		
+    4) À voir aussi
+    ---------------
+		
+		* Comment déployer une application Symfony :
+		  http://www.symfony-project.org/jobeet/1_2/Propel/en/23
+		
+		
+	-------------------------------------------------------------------------
+	| (c) 2009																|
+	-------------------------------------------------------------------------
+	
